improvement: maven add bundled and unbundled packing, and select full platform or specify OS platform (#35)